--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -1,7 +1,16 @@
 //-------------------------------------
 // FONT
 //-------------------------------------
-
+@base-font: 18px;
 //-------------------------------------
 // COLOR
 //-------------------------------------
+@c-orange: #ff0008;
+@c-gray: #c3c3c3;
+@c-dgray: #4e4e4e;
+
+@c-blue: #347ca9;
+@c-dblue: #3b4149;
+@c-dblue2: #5f6770;
+@c-lblue: #b4bcc5;
+@c-white: #fff;
