--- a/src/less/style.less
+++ b/src/less/style.less
@@ -6,7 +6,7 @@
 @import "base/variables.less";
 @import "base/typography.less";
 // @import "base/sprite.less";
-// @import "base/buttons.less";
+@import "base/buttons.less";
 // @import "base/form.less";
 
 
@@ -14,7 +14,8 @@
 //-------------------------------------
 // TEMPLATES STYLE
 //-------------------------------------
-// @import "templates/header.less";
+@import "pages/header.less";
+@import "pages/aside.less";
 // @import "templates/footer.less";s
 // @import "templates/local_blocks.less";
 
