--- a/src/less/style.less
+++ b/src/less/style.less
@@ -16,7 +16,7 @@
 //-------------------------------------
 @import "pages/header.less";
 @import "pages/aside.less";
-// @import "templates/footer.less";s
+@import "pages/footer.less";
 // @import "templates/local_blocks.less";
 
 //-------------------------------------
