--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,9 +1,9 @@
 <header class="header">
 	<div class="container">
 		<div class="header__inner">
-			<div class="header__logo">
+			<a class="header__logo" href="">
 				<img src="../img/logo.png" alt="breststal">
-			</div>
+			</a>
 			<nav class="list header__menu">
 				<a href="" class="list__item list__item_border-bottom">главная</a>
 				<a href="" class="list__item list__item_border-bottom">продукция</a>
@@ -17,5 +17,6 @@
 			<a href="tel:+375291234567"><i class="icon-phone"></i>+375291234567</a>
 			<a href=""><i class="icon-call"></i>консультация online</a>
 		</div>
+		<div class="hamburger"></div>
 	</div>
 </header>
