--- a/src/less/base/typography.less
+++ b/src/less/base/typography.less
@@ -68,6 +68,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-plus:before { content: '\e800'; } /* '' */
 .icon-call:before { content: '\e803'; } /* '' */
 .icon-mail:before { content: '\e808'; } /* '' */
 .icon-location:before { content: '\e809'; } /* '' */
