--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -9,8 +9,8 @@
 @c-gray: #c3c3c3;
 @c-dgray: #4e4e4e;
 
-@c-blue: #347ca9;
-@c-dblue: #3b4149;
+@c-blue: #3d80f1;
+@c-dblue: #0d1b33;
 @c-dblue2: #5f6770;
 @c-lblue: #b4bcc5;
 @c-white: #fff;
