--- a/src/template/header.html
+++ b/src/template/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="header__inner">
 			<a class="header__logo" href="">
-				<img src="../img/logo.png" alt="breststal">
+				<img src="img/logo.png" alt="breststal">
 			</a>
 			<nav class="list header__menu">
 				<a href="" class="list__item list__item_border-bottom">главная</a>
