--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="footer__inner">
 			<a class="footer__logo" href="">
-				<img src="../img/logo.png" alt="breststal">
+				<img src="img/logo.png" alt="breststal">
 			</a>
 			<nav class="list footer__menu">
 				<a href="" class="list__item list__item_dark">главная</a>
