--- a/src/less/pages/aside.less
+++ b/src/less/pages/aside.less
@@ -1,4 +1,21 @@
 .aside-menu {
-	padding-top: 10%;
+	padding-top: 20vh;
 	background: @c-white;
+
+
+	.list_colum {
+		padding: 0;
+	}
+	
+	.list__item {
+		text-align: center;
+		.sub-menu {
+			position: static;
+			padding: 10px;
+
+			.list__item {
+				text-align: left;
+			}
+		}
+	}
 }
