--- a/src/less/style.less
+++ b/src/less/style.less
@@ -24,6 +24,7 @@
 //-------------------------------------
 
 @import "pages/index.less";
+@import "pages/products.less";
 //-------------------------------------
 // media STYLE
 //-------------------------------------
