--- a/src/template/aside.html
+++ b/src/template/aside.html
@@ -1,10 +1,24 @@
 <div id="menu" class="aside-menu">
-	<nav  class="list list_colum">
-		<a href="" class="list__item list__item_border-bottom">главная</a>
-		<a href="" class="list__item list__item_border-bottom">продукция</a>
-		<a href="" class="list__item list__item_border-bottom">галерея</a>
-		<a href="" class="list__item list__item_border-bottom">прайс</a>
-		<a href="" class="list__item list__item_border-bottom">инструкции</a>
-		<a href="" class="list__item list__item_border-bottom">о нас</a>
+	<nav >
+		<ul class="list list_colum">
+			<li class="list__item list__item_border-bottom"><a href="">главная</a></li>
+			<li class="list__item list__item_border-bottom list__item_arr">
+				<a href="">продукция</a>
+				<ul class="sub-menu list list_colum">
+					<li class="list__item list__item_border-bottom"><a href="">металлочерепица</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">профнастил</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">фальцевая картина</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">водосточная система</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">комплектующие элементы кровли</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">софит</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">штакетник</a></li>
+					<li class="list__item list__item_border-bottom"><a href="">сопутствующие товары</a></li>
+				</ul>
+			</li>
+			<li class="list__item list__item_border-bottom"><a href="">галерея</a></li>
+			<li class="list__item list__item_border-bottom"><a href="">прайс</a></li>
+			<li class="list__item list__item_border-bottom"><a href="">инструкции</a></li>
+			<li class="list__item list__item_border-bottom"><a href="">о нас</a></li>
+		</ul>
 	</nav>
 </div>
