--- a/src/less/base/typography.less
+++ b/src/less/base/typography.less
@@ -68,8 +68,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+
 .icon-plus:before { content: '\e800'; } /* '' */
 .icon-call:before { content: '\e803'; } /* '' */
 .icon-mail:before { content: '\e808'; } /* '' */
 .icon-location:before { content: '\e809'; } /* '' */
 .icon-phone:before { content: '\e80a'; } /* '' */
+.icon-down:before { content: '\f107'; } /* '' */
