--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -14,3 +14,23 @@
 @c-dblue2: #5f6770;
 @c-lblue: #b4bcc5;
 @c-white: #fff;
+
+
+@c-1: #3e4243;
+@c-2: #9a5f0f;
+@c-3: #462600;
+@c-4: #a41117;
+@c-5: #010008;
+@c-6: #275a1f;
+@c-7: #ffffff;
+@c-8: #414139;
+@c-9: #2b2620;
+@c-10: #020e40;
+@c-11: #8c5244;
+@c-12: #6f2c02;
+@c-13: #010008;
+@c-14: #010008;
+@c-15: #462600;
+@c-16: #a41117;
+@c-17: #9a5f0f;
+@c-18: #46a837;
