--- a/src/less/style.less
+++ b/src/less/style.less
@@ -25,6 +25,7 @@
 
 @import "pages/index.less";
 @import "pages/products.less";
+@import "pages/category.less";
 //-------------------------------------
 // media STYLE
 //-------------------------------------
