--- a/src/less/base/typography.less
+++ b/src/less/base/typography.less
@@ -68,9 +68,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-
 .icon-plus:before { content: '\e800'; } /* '' */
+.icon-down-1:before { content: '\e801'; } /* '' */
 .icon-call:before { content: '\e803'; } /* '' */
+.icon-calendar:before { content: '\e805'; } /* '' */
 .icon-mail:before { content: '\e808'; } /* '' */
 .icon-location:before { content: '\e809'; } /* '' */
 .icon-phone:before { content: '\e80a'; } /* '' */
