--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -39,31 +39,52 @@ textarea:focus {
 
 // first
 .first {
-	background: url('../img/red-dash.png') 50% no-repeat;
+	// background: #000;
+	background: url('../../img/top-bg.jpg') no-repeat;
+	background-position: 50% 90px ;
 	background-size: cover;
 	background-attachment: fixed;
 	color: @c-white;
 	position: relative;
 
+	&_active {
+		background-position: 50% -100px ;
+	}
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: url('../../img/top.png') no-repeat,url('../../img/bottom.png') no-repeat  ;
+		background-position: 50% 170px, 50% 105%;
+		// background-size: contain;
+
+	}
+
 	&__inner {
 		height: 100vh;
 		min-height: 100vh !important;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding-top: 120px;
+		// display: flex;
+		// justify-content: center;
+		// align-items: center;
+		padding-top: 170px;
 		overflow: hidden;
 
 		.row {
-			display: flex;
-			flex-wrap: wrap;
+			position: relative;
 		}
 	}
 
 	&__txt {
-		font-weight: bold;
+		// font-weight: bold;
 		font-size: 1.3em;
 		text-transform: uppercase;
+		color: @c-dgray;
+		position: absolute;
+		top: 40px;
 
 		p {
 			margin: 0;
