--- a/src/less/pages/header.less
+++ b/src/less/pages/header.less
@@ -1,10 +1,22 @@
 .header {
 	background: @c-white;
 	padding: 30px 0 20px;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 10;
+	transition: padding .5s;
+
+	// &_sticked {
+	// 	padding: 0;
+	// 	background: rgba(255,255,255,.95);
+	// 	box-shadow: 0 0 10px @c-gray;
+
+	// 	.header__contacts {
+	// 		display: none;
+	// 	}
+	// }
 
 	.container {
 		position: relative;
@@ -20,7 +32,7 @@
 
 	&__contacts {
 		position: absolute;
-		top: -10px;
+		top: -15px;
 		right: 10px;
 		font-size: .7em;
 
@@ -42,8 +54,8 @@
 	}
 
 	&__logo {
-		width: 150px;
-		height: 70px;
+		width: 260px;
+		height: 120px;
 		display: flex;
 
 		img {
