--- a/src/less/pages/products.less
+++ b/src/less/pages/products.less
@@ -19,8 +19,9 @@
 
 	&__img {
 		height: 270px;
+		position: relative;
 		// width: 100%;
-		background: url('../../img/product.jpg') no-repeat 50%;
+		background: url('../img/product.jpg') no-repeat 50%;
 		background-size: cover;
 	}
 
