--- a/src/template/header.html
+++ b/src/template/header.html
@@ -28,8 +28,9 @@
 			</nav>
 		</div>
 		<div class="header__contacts">
+			<a href="tel:+375291234567"><i class="icon-calendar"></i>пн-пт: 8:30-13:00, 14:00-17:30</a>
 			<a href="tel:+375291234567"><i class="icon-phone"></i>+375291234567</a>
-			<a href=""><i class="icon-call"></i>консультация online</a>
+			<a href=""><i class="icon-call"></i>заказать звонок</a>
 		</div>
 		<div class="hamburger"></div>
 	</div>
