--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -7,11 +7,13 @@
 //-------------------------------------
 @c-orange: #ff0008;
 @c-gray: #c3c3c3;
+@c-lgray: #efefef;
 @c-dgray: #4e4e4e;
 
 @c-blue: #3d80f1;
 @c-dblue: #0d1b33;
 @c-dblue2: #5f6770;
+@c-dblue3: #586b80;
 @c-lblue: #b4bcc5;
 @c-white: #fff;
 
