--- a/src/less/pages/header.less
+++ b/src/less/pages/header.less
@@ -1,6 +1,6 @@
 .header {
 	background: @c-white;
-	padding: 30px 0 20px;
+	padding: 20px 0 5px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -8,15 +8,6 @@
 	z-index: 10;
 	transition: padding .5s;
 
-	// &_sticked {
-	// 	padding: 0;
-	// 	background: rgba(255,255,255,.95);
-	// 	box-shadow: 0 0 10px @c-gray;
-
-	// 	.header__contacts {
-	// 		display: none;
-	// 	}
-	// }
 
 	.container {
 		position: relative;
@@ -32,7 +23,7 @@
 
 	&__contacts {
 		position: absolute;
-		top: -15px;
+		top: 0px;
 		right: 10px;
 		font-size: .7em;
 
@@ -57,11 +48,31 @@
 		width: 260px;
 		height: 120px;
 		display: flex;
+		transition: all .3s;
+		position: relative;
 
 		img {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
 			max-width: 100%;
 			max-height: 100%;
 			margin: auto;
+		}
+	}
+	&_sticked {
+		padding: 0;
+		background: rgba(255,255,255,.95);
+		box-shadow: 0 0 10px @c-gray;
+
+		.header__contacts {
+			display: none;
+		}
+
+		.header__logo {
+			height: 70px;
 		}
 	}
 }
@@ -108,7 +119,7 @@
 				width: 0%;
 				margin: auto;
 				background: @c-orange;
-				transition: all .3s;
+				transition: all .7s;
 			}
 
 			&:hover {
