--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -40,7 +40,7 @@ textarea:focus {
 // first
 .first {
 	// background: #000;
-	background: url('../../img/top-bg.jpg') no-repeat;
+	background: url('../img/top-bg.jpg') no-repeat;
 	background-position: 50% 90px ;
 	background-size: cover;
 	background-attachment: fixed;
@@ -58,9 +58,9 @@ textarea:focus {
 		bottom: 0;
 		left: 0;
 		right: 0;
-		background: url('../../img/top.png') no-repeat,url('../../img/bottom.png') no-repeat  ;
-		background-position: 50% 170px, 50% 105%;
-		// background-size: contain;
+		background: url('../img/top.png') no-repeat,url('../img/bottom.png') no-repeat  ;
+		background-position: 50% 145px, 50% 105%;
+		background-size: 100%;
 
 	}
 
@@ -71,11 +71,7 @@ textarea:focus {
 		// justify-content: center;
 		// align-items: center;
 		padding-top: 170px;
-		overflow: hidden;
-
-		.row {
-			position: relative;
-		}
+		position: relative;
 	}
 
 	&__txt {
@@ -84,7 +80,7 @@ textarea:focus {
 		text-transform: uppercase;
 		color: @c-dgray;
 		position: absolute;
-		top: 40px;
+		top: 180px;
 
 		p {
 			margin: 0;
@@ -92,30 +88,55 @@ textarea:focus {
 	}
 }
 
-.manager {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
+.consultant {
+	position: absolute;
+	top: 500px;
+	right: -20%;
 
-	p {
-		margin: 0;
-		text-transform: uppercase;
-		width: 100%;
+	button {
+		font-size: .6em;
+		padding: 5px 10px;
+		background: rgba(255,255,255,.8);
+		border: none;
+		color: @c-dblue3; 
+		font-weight: 600;
+		width: 240px;
+		transition: all .3s;
+
+		&:hover {
+			background: rgba(255,255,255,1);
+		}
 	}
+
+	&__form {
+		display: none;
+		position: absolute;
+		top: 100%;
+		width: 100%;	
+		text-align: center;
+		background: @c-white;
+		padding: 20px 0;
+	}
+
+	&__field {
+		width: 80%;
+		margin: 5px 0;
+		border: none;
+		background: @c-lgray;
+		padding: 5px;
+		color: @c-dgray;
+		font-size: .8em;
+	}
+	
 
 	&__btn {
-		width: 100%;
-	}
-
-	&__icon {
-		display: inline-block;
-		vertical-align: middle;
-		margin-left: 3%;
-		width: 20px;
-		height: 20px;
-		background: url("../img/head.png") 50% no-repeat;
-		background-size: contain;
+		width: 80%;	
+		margin-top: 15px;
+		background: @c-blue;
+		border: none;
+		text-transform: uppercase;
+		font-size: .7em;
+		padding: 7px 0;
 	}
 }
 
@@ -202,6 +223,31 @@ textarea:focus {
 .products {
 	color: @c-dgray;
 	padding: 70px 0;
+
+	&__menu {
+		a[data-slide="second"] {
+			display: none;
+		}
+
+		a {
+			font-size: .8em;
+			text-transform: uppercase;
+		}
+
+		&-nav {
+			margin-right: 20px;
+			a {
+				margin: 0 7px;
+				font-size: 1em;
+				color: @c-dgray;
+				transition: all .3s;
+
+				&:hover {
+					color: @c-gray;
+				}
+			}
+		}
+	}
 
 	&__header {
 		display: flex;
@@ -323,7 +369,7 @@ textarea:focus {
 
 // info
 .info {
-	padding: 80px 0;
+	padding: 40px 0;
 	text-align: center;
 	font-size: 1.55em;
 	background: @c-blue;
