--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,6 +7,7 @@
 @import "base/typography.less";
 // @import "base/sprite.less";
 @import "base/buttons.less";
+// @import "base/sprite.less";
 // @import "base/form.less";
 
 
