--- a/src/less/style.less
+++ b/src/less/style.less
@@ -27,6 +27,9 @@
 @import "pages/index.less";
 @import "pages/products.less";
 @import "pages/category.less";
+@import "pages/about_us.less";
+@import "pages/gallery.less";
+@import "pages/price.less";
 //-------------------------------------
 // media STYLE
 //-------------------------------------
