--- a/src/less/pages/category.less
+++ b/src/less/pages/category.less
@@ -271,6 +271,7 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 40px 0;
+	margin-bottom: 50px;
 	border-top: 1px solid @c-gray;
 	border-bottom: 1px solid @c-gray;
 	&__item {
