--- a/src/template/header.html
+++ b/src/template/header.html
@@ -6,11 +6,11 @@
 			</a>
 			<nav class="header__menu">
 				<ul class="list">
-					<li class="list__item list__item_border-bottom"><a href="">главная</a></li>
+					<li class="list__item list__item_border-bottom"><a href="index.html">главная</a></li>
 					<li class="list__item list__item_border-bottom list__item_arr">
-						<a href="">продукция</a>
+						<a href="products.html">продукция</a>
 						<ul class="sub-menu list list_colum">
-							<li class="list__item list__item_border-bottom"><a href="">металлочерепица</a></li>
+							<li class="list__item list__item_border-bottom"><a href="category.html">металлочерепица</a></li>
 							<li class="list__item list__item_border-bottom"><a href="">профнастил</a></li>
 							<li class="list__item list__item_border-bottom"><a href="">фальцевая картина</a></li>
 							<li class="list__item list__item_border-bottom"><a href="">водосточная система</a></li>
@@ -20,10 +20,10 @@
 							<li class="list__item list__item_border-bottom"><a href="">сопутствующие товары</a></li>
 						</ul>
 					</li>
-					<li class="list__item list__item_border-bottom"><a href="">галерея</a></li>
-					<li class="list__item list__item_border-bottom"><a href="">прайс</a></li>
-					<li class="list__item list__item_border-bottom"><a href="">инструкции</a></li>
-					<li class="list__item list__item_border-bottom"><a href="">о нас</a></li>
+					<li class="list__item list__item_border-bottom"><a href="gallery.html">галерея</a></li>
+					<li class="list__item list__item_border-bottom"><a href="price.html">прайс</a></li>
+					<li class="list__item list__item_border-bottom"><a href="instructions.html">инструкции</a></li>
+					<li class="list__item list__item_border-bottom"><a href="about_us.html">о нас</a></li>
 				</ul>
 			</nav>
 		</div>
