--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -10,7 +10,7 @@
 @c-lgray: #efefef;
 @c-dgray: #4e4e4e;
 
-@c-blue: #3d80f1;
+@c-blue: #007bc1;
 @c-dblue: #0d1b33;
 @c-dblue2: #5f6770;
 @c-dblue3: #586b80;
@@ -18,21 +18,16 @@
 @c-white: #fff;
 
 
-@c-1: #3e4243;
-@c-2: #9a5f0f;
-@c-3: #462600;
-@c-4: #a41117;
-@c-5: #010008;
-@c-6: #275a1f;
-@c-7: #ffffff;
-@c-8: #414139;
-@c-9: #2b2620;
-@c-10: #020e40;
-@c-11: #8c5244;
-@c-12: #6f2c02;
-@c-13: #010008;
-@c-14: #010008;
-@c-15: #462600;
-@c-16: #a41117;
-@c-17: #9a5f0f;
-@c-18: #46a837;
+@c-1: #5e2129;
+@c-2: #642424;
+@c-3: #781f19;
+@c-4: #20214f;
+@c-5: #1e2d6e;
+@c-6: #2f4538;
+@c-7: #2e3a23;
+@c-8: #474a51;
+@c-9: #8e402a;
+@c-10: #45322e;
+@c-11: #403a3a;
+@c-12: #f4f4f4;
+@c-13: #0a0a0a;
