--- a/src/less/base/media.less
+++ b/src/less/base/media.less
@@ -8,6 +8,21 @@
 	.first {
 		background-size: 130%;
 	}
+
+	.category {
+		&-product {
+			flex-basis: 280px;
+			height: 300px;
+		}
+
+		&-list {
+			font-size: .8em;
+		}
+
+		.border-line {
+			left: 320px;
+		}
+	}
 }
 
 
@@ -56,6 +71,41 @@
 	.first {
 		background-size: 180%;
 	}
+
+	.gallery {
+		&__item {
+			width: 48%;
+		}
+	}
+
+	.fancybox-prev span {
+		left: 5px;
+	}
+	.fancybox-next span {
+		right: 5px;
+	}
+	.fancybox-nav span {
+		top: auto;
+		bottom: 0;
+	}
+
+	.category_short {
+		.category-list {
+			font-size: .8em;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			margin-bottom: 50px;
+
+			&__item {
+				width: 49%;
+			}
+		}
+
+		.border-line {
+			display: none;
+		}
+	}	
 }
 
 @media all and (max-width: 769px) {
@@ -140,6 +190,39 @@
 			top: -15px;
 		}
 	}
+
+	.category {
+		&-products {
+			justify-content: center;
+		}
+		&-product {
+			flex-basis: 300px;
+			height: 320px;
+		}
+
+		&-list {
+			font-size: .8em;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			&__item {
+				width: 49%;
+			}
+		}
+
+		.border-line {
+			display: none;
+		}
+	}
+
+	.prices-info {
+		padding-left: 15px;
+	}
+
+	.pay {
+		padding: 0 15px;
+	}
 }
 
 
@@ -199,7 +282,21 @@
 
 	.category {
 		padding: 20px 0;
+
+		&-list {
+			&__item {
+				width: 100%;
+			}
+		}
 	}
+
+	.category_short {
+		.category-list {
+			&__item {
+				width: 100%;
+			}
+		}
+	}	
 
 	.product {
 		&__img {
@@ -227,6 +324,12 @@
 			}
 		}
 	}
+
+	.gallery {
+		&__item {
+			width: 80%;
+		}
+	}
 }
 
 @media all and (max-width: 480px) {
@@ -234,7 +337,11 @@
 	.first {
 		background-size: 320%;
 	}
-	.header__contacts {
+	.header {
+		.container:before,
+		.container:after {
+			display: none;
+		}
 	} 
 
 	.header__logo {
@@ -295,6 +402,31 @@
 	}
 
 	.footer__logo {
-		height: 90px;
+		height: 65px;
+	}
+
+	.gallery {
+		&__item {
+			width: 96%;
+			height: 300px;
+		}
+	}
+
+	.about-us {
+		&__item {
+			align-items: flex-start;
+
+		}
+		&__num {
+			font-size: 5em;
+			&:after {
+				bottom: 0;
+			}
+		}
+		&__txt {
+			h2 {
+				font-size: 1.3em;
+			}
+		}
 	}
 }
