--- a/src/less/pages/category.less
+++ b/src/less/pages/category.less
@@ -9,18 +9,18 @@
 
 	.row {
 		position: relative;
-
-		.border-line {
-			content: '';
-			display: inline-block;
-			width: 2px;
-			background: @c-gray;
-			position: absolute;
-			top: 0;
-			bottom: 80px;
-			left: 390px;
-		}
 	}
+	.border-line {
+		content: '';
+		display: inline-block;
+		width: 2px;
+		background: @c-gray;
+		position: absolute;
+		top: 0;
+		bottom: 80px;
+		left: 390px;
+	}
+	
 	padding: 60px 0;
 
 	&-list {
@@ -127,8 +127,14 @@
 			margin-bottom: 20%;
 			position: relative;
 			img {
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
 				max-width: 100%;
 				max-height: 100%;
+				margin: auto;
 			}
 
 			&-scale {
@@ -322,6 +328,7 @@
 		height: 40px;
 		background: #000;
 		cursor: pointer;
+		outline: 1px solid @c-gray;
 
 		&:hover {
 			outline: 3px solid @c-gray;
@@ -369,21 +376,6 @@
 		&[data-color="col13"] {
 			background: @c-13;
 		}
-		&[data-color="col14"] {
-			background: @c-14;
-		}
-		&[data-color="col15"] {
-			background: @c-15;
-		}
-		&[data-color="col16"] {
-			background: @c-16;
-		}
-		&[data-color="col17"] {
-			background: @c-17;
-		}
-		&[data-color="col18"] {
-			background: @c-18;
-		}
 	}
 
 	&-texture {
@@ -423,20 +415,120 @@
 	&-about[data-color="col1"] {
 
 		.pallite-texture__matted {
-			background: url('../img/braun.png');
+			background: url('../img/palitra/3005m.png');
 		}
 		.pallite-texture__glossy {
-			background: @c-1;
+			background: url('../img/palitra/3005.png');
 		}
 	}
 
 	&-about[data-color="col2"] {
-		
+
 		.pallite-texture__matted {
-			background: url('../img/braun.png');
+			background: url('../img/palitra/3009m.png');
 		}
 		.pallite-texture__glossy {
-			background: @c-2;
+			background: url('../img/palitra/3009.png');
+		}
+	}
+
+	&-about[data-color="col3"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/3011m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/3011.png');
+		}
+	}
+	&-about[data-color="col4"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/5002m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/5002.png');
+		}
+	}
+	&-about[data-color="col5"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/5005m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/5005.png');
+		}
+	}
+	&-about[data-color="col6"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/6005m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/6005.png');
+		}
+	}
+	&-about[data-color="col7"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/6020m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/6020.png');
+		}
+	}
+	&-about[data-color="col8"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/7024m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/7024.png');
+		}
+	}
+	&-about[data-color="col9"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/8004m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/8004.png');
+		}
+	}
+	&-about[data-color="col10"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/8017m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/8017.png');
+		}
+	}
+	&-about[data-color="col11"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/8019m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/8019.png');
+		}
+	}
+	&-about[data-color="col12"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/9003m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/9003.png');
+		}
+	}
+	&-about[data-color="col13"] {
+
+		.pallite-texture__matted {
+			background: url('../img/palitra/9005m.png');
+		}
+		.pallite-texture__glossy {
+			background: url('../img/palitra/9005.png');
 		}
 	}
 }
