--- a/src/less/pages/about_us.less
+++ b/src/less/pages/about_us.less
@@ -21,7 +21,7 @@
 		}
 
 		&_bordered {
-			border-top: 1px solid @c-lgray;
+			border-top: 1px solid @c-gray;
 		}
 	}
 
@@ -61,5 +61,5 @@
 	height: 450px;
 	background: url('../../img/factory2.png') 50% 10% no-repeat;
 	background-size: cover;
-	margin: 70px 0;
+	margin: 35px 0;
 }
