--- a/src/less/base/media.less
+++ b/src/less/base/media.less
@@ -2,6 +2,15 @@
 	.consultant {
 		right: 0;
 	}
+
+	.first__txt {
+		font-size: .9em;
+		width: 65%;
+		margin: auto;
+		left: 0;
+		right: 0;
+		top: 155px;
+	}
 }
 
 @media all and (max-width: 1200px) {
@@ -23,6 +32,7 @@
 			left: 320px;
 		}
 	}
+
 }
 
 
