--- a/src/less/pages/gallery.less
+++ b/src/less/pages/gallery.less
@@ -50,3 +50,19 @@ a.pop-up__close {
 		 }
 	}
 }
+
+.instructions .gallery {
+		.gallery__item {
+
+		img {
+			height: auto;
+			width: 100%;
+		}
+	}
+}
+
+.instructions {
+	.fancybox-close {
+		display: none ;
+	}
+}
